# assemblylift

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile_aws-lambda  LICENSE.md  README.md  build.rb
backends/aws-lambda/guest/: Cargo.toml  README.md
backends/aws-lambda/guest/src/: lib.rs
backends/aws-lambda/host/: Cargo.toml
backends/aws-lambda/host/src/: main.rs  runtime.rs  wasm.rs
backends/aws-lambda/io/: Cargo.toml
backends/aws-lambda/io/src/: client.rs  lib.rs
backends/aws-lambda/iomod/: Cargo.toml  README.md
backends/aws-lambda/iomod/dynamodb/: Cargo.toml
backends/aws-lambda/iomod/dynamodb/guest/: Cargo.toml
backends/aws-lambda/iomod/dynamodb/src/: main.rs
backends/aws-lambda/iomod/guest/: Cargo.toml  README.md
backends/aws-lambda/iomod/guest/src/: lib.rs  structs.rs
backends/aws-lambda/iomod/plugins/: README.md
backends/aws-lambda/iomod/plugins/dynamodb/: Cargo.toml
backends/aws-lambda/iomod/src/: client.rs  lib.rs
backends/aws-lambda/widget/: Cargo.toml
backends/aws-lambda/widget/src/: lib.rs
builtin/functions/verify-macaroon/: Cargo.toml
builtin/functions/verify-macaroon/src/: main.rs
cli/: Cargo.toml  README.md
cli/src/: archive.rs  artifact.rs  docker.rs  main.rs  projectfs.rs  templates.rs
cli/src/bom/: function.rs  manifest.rs  mod.rs  service.rs
cli/src/commands/: bind.rs  burn.rs  cast.rs  compile.rs  deploy.rs  host.rs  init.rs  make.rs  mod.rs  move.rs  nuke.rs  pack.rs  push.rs  user.rs
cli/src/commands/cast/: mod.rs  ruby.rs  rust.rs
cli/src/commands/cast/wasm/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm  wasi_snapshot_preview1.wasm
cli/src/glooctl/: mod.rs
cli/src/materials/: asml.rs  hcl.rs  mod.rs  models.rs  toml.rs
cli/src/providers/: aws_lambda.rs  aws_lambda_alpine.rs  k8s.rs  k8s_generic_alpine.rs  k8s_hyper_alpine.rs  mod.rs
cli/src/providers/gloo/: mod.rs
cli/src/providers/k8s/: mod.rs  templates.rs
cli/src/providers/route53/: mod.rs
cli/src/templates/: mod.rs  project.rs  terraform.rs
cli/src/terraform/: commands.rs  function.rs  mod.rs  service.rs
cli/src/tools/: cmctl.rs  glooctl.rs  kubectl.rs  mod.rs  terraform.rs
cli/src/transpiler/: asml.rs  context.rs  hcl.rs  kube.rs  mod.rs  net.rs  toml.rs
core/: Cargo.toml  README.md
core/event/: Cargo.toml  README.md
core/event/common/: Cargo.toml
core/event/common/src/: constants.rs  lib.rs
core/event/guest/: Cargo.toml
core/event/guest/src/: lib.rs
core/event/src/: builder.rs  executor.rs  lib.rs  manager.rs  threader.rs
core/guest/: Cargo.toml  README.md
core/guest/macros/: Cargo.toml  README.md
core/guest/macros/src/: lib.rs
core/guest/src/: assemblylift.rs  command.rs  jwt.rs  lib.rs  opa.rs  secrets.rs  wasi_command.rs  wasi_secrets.rs
core/io/: Cargo.toml
core/io/common/: Cargo.toml  README.md
core/io/common/src/: constants.rs
core/io/guest/: Cargo.toml  README.md
core/io/guest/src/: lib.rs
core/io/src/: lib.rs
core/iomod/: Cargo.toml  build.rs  iomod.capnp
core/iomod/guest/: Cargo.toml
core/iomod/guest/src/: lib.rs
core/iomod/src/: lib.rs  macros.rs  package.rs  plugin.rs  registry.rs
core/src/: abi.rs  buffers.rs  client.rs  iomod.rs  lib.rs  policy_manager.rs  registry.rs  threader.rs  wasm.rs
core/src/event/: builder.rs  constants.rs  executor.rs  manager.rs  mod.rs  serde.rs  widget.rs
core/src/iomod/: macros.rs  mod.rs  plugin.rs  registry.rs
core/src/jwt/: README.md  error.rs  jwt.rs  keyset.rs  mod.rs
core/src/wasm/: cache.rs  mod.rs
core/wasi/: README.md
core/wasi/wasi-common/: Cargo.toml
core/wasi/wasi-common/cap-std-sync/: Cargo.toml
core/wasi/wasi-common/cap-std-sync/src/: clocks.rs  dir.rs  file.rs  lib.rs  net.rs  sched.rs  stdio.rs
core/wasi/wasi-common/src/: clocks.rs  connection.rs  ctx.rs  dir.rs  file.rs  lib.rs  listener.rs  pipe.rs  random.rs  sched.rs  stream.rs  table.rs  tcp_listener.rs
core/wasi/wasi-common/src/sched/: subscription.rs
core/wasi/wasi-common/tokio/src/: dir.rs  file.rs  lib.rs  net.rs  sched.rs  stdio.rs
core/wasi/wasi-common/tokio/tests/: poll_oneoff.rs
core/wasi/wasi-host/: Cargo.toml
core/wasi/wasi-host/src/: clocks.rs  filesystem.rs  io.rs  lib.rs  main.rs  poll.rs  stderr.rs  tcp.rs
core/wasi/wasi-host/tests/: runtime.rs
core/wasi/wit/: wasi-clocks.wit  wasi-command.wit  wasi-dns.wit  wasi-filesystem.wit  wasi-io.wit  wasi-ip.wit  wasi-net.wit  wasi-poll.wit  wasi-tcp.wit  wasi.wit
core/wit/: assemblylift.wit  jwt.wit  opa.wit
core/wit/assemblylift/: assemblylift.wit
core/wit/jwt/: jwt.wit
core/wit/opa/: opa.wit
core/wit/secrets/: secrets.wit
docker/: asml-generic-alpine  (+6 more)
examples/hello-world/: Cargo.toml  assemblylift.toml
examples/hello-world/services/hello/: service.toml
examples/hello-world/services/hello/ruby/: handler.rb
examples/hello-world/services/hello/rust/: Cargo.toml
examples/hello-world/src/: lib.rs
examples/todo/create/: Cargo.toml
examples/todo/create/src/: lib.rs
generator/: Cargo.toml
generator/src/: context.rs  drivers.rs  lib.rs  projectfs.rs
generator/src/providers/: mod.rs
generator/src/providers/api_gateway/: mod.rs
generator/src/providers/aws_lambda/: mod.rs
generator/src/providers/ecr/: mod.rs
generator/src/providers/gloo/: mod.rs
generator/src/providers/kubernetes/: mod.rs
generator/src/providers/route53/: mod.rs
generator/src/templates/: context.tf.handlebars
generator/src/toml/: asml.rs  mod.rs  service.rs
providers/generic-docker/: Cargo.toml
providers/generic-docker/src/: abi.rs  main.rs  runner.rs
providers/kubelet/: Cargo.toml
providers/kubelet/src/: abi.rs  main.rs  runtime.rs  states.rs
runtimes/hyper/: Cargo.toml
runtimes/hyper/src/: abi.rs  launcher.rs  lib.rs  main.rs  runner.rs
runtimes/kubelet/: Cargo.toml
runtimes/kubelet/src/: abi.rs  main.rs  runtime.rs
runtimes/openfaas/: Cargo.toml  README.md
runtimes/openfaas/src/: abi.rs  main.rs  runner.rs
tools/: Cargo.toml
tools/src/: cmctl.rs  glooctl.rs  kubectl.rs  lib.rs  terraform.rs
(+73 files in other folders)
