[workspace]
members = [
    "runtimes/aws-lambda/host",
    "runtimes/aws-lambda/guest",
    "runtimes/hyper",
#    "runtimes/kubelet",
#    "runtimes/openfaas",
    "core",
    "core/guest",
    "core/guest/macros",
    "core/iomod",
    "core/iomod/guest",
    "core/io",
    "core/io/guest",
    "core/io/common",
    "cli"
]
exclude = ["examples"]
