[workspace]
members = [
    "runtimes/aws-lambda/host",
    "runtimes/aws-lambda/guest",
    "runtimes/hyper",
#    "builtin/functions/verify-macaroon",
    "core",
    "core/guest",
    "core/guest/macros",
    "core/iomod",
    "core/iomod/guest",
    "core/io",
    "core/io/guest",
    "core/io/common",
    "cli"
]
exclude = ["examples"]
