[package]
name = "assemblylift-cli"
version = "0.3.0"
description = "AssemblyLift command line interface"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"
exclude = ["resources/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "asml"
path = "src/main.rs"

[dependencies]
base64 = "0.13"
z85 = "3"
clap = "2.33"
handlebars = "3.5"
once_cell = "1.7"
path_abs = "0.5"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.5"
walkdir = "2.3"
zip = "0.5"

wasmer = { package = "wasmer-asml-fork", version = "1.0" }
wasmer-compiler = "1.0"
wasmer-compiler-cranelift = "1.0"
#wasmer-compiler-llvm = "1.0"
wasmer-engine-native = "1.0"
wasmer-engine-jit = "1.0"

registry_common = { version = "0.1", package = "asml-iomod-registry-common", path = "../../assemblylift-iomod-registry/crates/asml-iomod-registry-common" }

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]
