[package]
name = "assemblylift-cli"
version = "0.3.3-beta"
description = "AssemblyLift command line interface"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"
exclude = ["resources/**"]

[[bin]]
name = "asml"
path = "src/main.rs"

[dependencies]
base64 = "0.13"
z85 = "3"
clap = "2.33"
handlebars = "3.5"
once_cell = "1.7"
path_abs = "0.5"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.5"
walkdir = "2.3"
zip = "0.5"

wasmer = { package = "wasmer-asml-fork", version = "2.0" }
wasmer-compiler = { version = "2.0" }
wasmer-compiler-cranelift = {version = "2.0" }
#wasmer-compiler-llvm = "1.0"
#wasmer-engine-native = "1.0"
wasmer-engine-universal = { version = "2.0" }

assemblylift_core_iomod = { version = "0.3", package = "assemblylift-core-iomod", path = "../core/iomod" }

registry_common = { version = "0.1", package = "asml-iomod-registry-common" }

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]
