[package]
name = "assemblylift-cli"
version = "0.4.0-alpha.7"
description = "The AssemblyLift Command Line Interface"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"
exclude = ["resources/**"]

[[bin]]
name = "asml"
path = "src/main.rs"

[dependencies]
base64 = "0.13"
bytes = "1.1"
clap = "2.33"
dialoguer = "0.10"
flate2 = "1"
handlebars = "3.5"
itertools = "0.10"
jsonpath_lib = "0.3.0"
once_cell = "1.7"
path_abs = "0.5"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tar = "0.4"
toml = "0.5"
walkdir = "2.3"
z85 = "3"
zip = "0.6"

wasmer = "2.1.1"
wasmer-compiler = "2.1.1"
wasmer-compiler-cranelift = "2.1.1"
wasmer-compiler-singlepass = "2.1.1"
wasmer-engine-universal = "2.1.1"

assemblylift-core = { version = "0.4.0-alpha.3", path = "../core" }
assemblylift-core-iomod = { version = "0.4.0-alpha.0", path = "../core/iomod" }

registry_common = { version = "0.1", package = "asml-iomod-registry-common" }

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]
