[package]
name = "assemblylift-core"
version = "0.4.0-beta.0"
description = "AssemblyLift core library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
itertools = "0.10"
once_cell = "1.4"
opa = { version = "0.10.0-dev", git = "https://github.com/dotxlem/opa-rs.git", rev = "2655dc8" }
serde_json = "1"
tokio = { version = "1.4", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }

assemblylift-wasi-host = { git = "https://github.com/bytecodealliance/preview2-prototyping.git", rev = "4e84fc2", package = "host" }
assemblylift-wasi-common = { git = "https://github.com/bytecodealliance/preview2-prototyping.git", rev = "4e84fc2", package = "wasi-common" }
assemblylift-wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/preview2-prototyping.git", rev = "4e84fc2", package = "wasi-cap-std-sync" }
wasmtime = { version = "7.0.0", features = ["default", "component-model"] }
wasm-tools = "1.0.28"
wit-component = "0.7.1"

assemblylift-core-iomod = { path = "./iomod" }
