[package]
name = "assemblylift-core"
version = "0.4.0-beta.0"
description = "AssemblyLift core library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bincode = "1.3"
crossbeam-channel = "0.5"
itertools = "0.10"
once_cell = "1.4"
opa = { version = "0.10.0-dev", git = "https://github.com/dotxlem/opa-rs.git", rev = "19f4836" }
regex = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ring = "0.16"
serde = "1"
serde_json = "1"
tokio = { version = "1.4", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }

wasmtime = { version = "18.0", features = ["default", "component-model"] }
wasmtime-wasi = { version = "18.0", features = ["preview2"] }

wat = "1.0.85"
wast = "70.0.2"
wasm-encoder = "0.41"
wit-component = "0.20.1"
wit-parser = "0.13.1"

assemblylift-core-iomod = { path = "./iomod" }

[dev-dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tokio-test = "0.4"
