[package]
name = "assemblylift-generator"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["cargo"] }
handlebars = "4.4"
itertools = "0.11"
jsonpath_lib = "0.3.0"
# once_cell = "1.18"
path_abs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
typetag = "0.2"
walkdir = "2.4"

assemblylift-tools = { path = "../tools" }
