[package]
name = "assemblylift-tools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
flate2 = "1"
itertools = "0.10"
serde_json = "1"
tar = "0.4"
zip = "0.6"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]
