[package]
name = "assemblylift-core-event"
version = "0.1.0"
authors = ["Daniel Cook <xlem@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.20"
futures = "0.3.4"
lazy_static = "1.4.0"
indexmap = "1.3.2"
crossbeam-utils = "0.7.2"
bincode = "1.2.1"
serde = { version = "1.0.106", features = ["derive"]}
assemblylift-core-event-common = { path = "../../core/event/common" }
