[package]
name = "assemblylift-core-event"
version = "0.1.0"
description = "AssemblyLift core event library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license = "Hippocratic-2.1"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.20"
futures = "0.3.4"
lazy_static = "1.4.0"
indexmap = "1.3.2"
crossbeam-utils = "0.7.2"
bincode = "1.2.1"
serde = { version = "1.0.106", features = ["derive"]}
assemblylift-core-event-common = { path = "../../core/event/common" }
