[package]
name = "assemblylift-core-event"
version = "0.2.0"
description = "AssemblyLift core event library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded"] }
futures = "0.3.5"
lazy_static = "1.4.0"
indexmap = "1.3.2"
crossbeam-utils = "0.7.2"
serde = { version = "1.0.106", features = ["derive"]}

wasmer_runtime_core = { version = "0.1.1", package = "wasmer-runtime-core-asml-fork" }

assemblylift-core = { version = "0.2.0", path = "../../core" }
assemblylift-core-event-common = { version = "0.2.0", path = "../../core/event/common" }
