[package]
name = "assemblylift-core-guest"
version = "0.2.0"
description = "AssemblyLift core WASM guest library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[dependencies]
paste = "0.1.12"
