[package]
name = "assemblylift-core-guest"
version = "0.4.0-beta.0"
description = "AssemblyLift core WASM guest library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["cargo"] }
direct-executor = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.15"

assemblylift-core-guest-macros = { version = "0.4.0-beta.0", path = "./macros" }
