[package]
name = "assemblylift-core-iomod"
version = "0.3.0"
description = "AssemblyLift core IOmod library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

build = "build.rs"

[dependencies]
tokio = { version = "1.4", features = ["macros", "net", "sync", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3.5"
futures-util = "0.3.5"
crossbeam-utils = "0.7.2"
once_cell = "1.4.0"
lazy_static = "1.4.0"
serde = "1"
paste = "0.1.12"
toml = "0.5"
libloading = "0.6.2"
capnp = "0.13.3"
capnp-rpc = "0.13.1"

assemblylift_core_io_common = { version = "0.3.0", package = "assemblylift-core-io-common", path = "../io/common" }

[build-dependencies]
rustc_version = "0.2.3"
capnpc = "0.13.1"
