[package]
name = "assemblylift-core-iomod"
version = "0.4.0-beta.0"
description = "AssemblyLift core IOmod library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

build = "build.rs"

[dependencies]
tokio = { version = "1.4", features = ["macros", "net", "sync", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["compat"] }
futures = "0.3"
futures-util = "0.3"
once_cell = "1.4"
lazy_static = "1.4"
serde = "1"
paste = "1"
toml = "0.5"
capnp = "0.15"
capnp-rpc = "0.15"
tracing = "0.1"

assemblylift_core_io_common = { version = "0.3", package = "assemblylift-core-io-common", path = "../io/common" }

[build-dependencies]
rustc_version = "0.4"
capnpc = "0.15"
