[package]
name = "hello-world"
version = "0.1.0"
authors = ["Daniel Cook <daniel@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
direct-executor = "0.3.0"
core_guest = { package = "assemblylift-core-guest", path = "../../core/guest" }
core_event_guest = { package = "assemblylift-core-event-guest", path = "../../core/event/guest" }
guest = { package = "assemblylift-awslambda-guest", path = "../../backends/aws-lambda/guest" }
awsio = { package = "assemblylift-awslambda-iomod-guest", path = "../../backends/aws-lambda/iomod/guest" }
