[package]
name = "assemblylift-generic-docker"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3.1", features = ["cargo"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
wasmer = "2.1.1"
zip = "0.6"

assemblylift-core = { version = "0.4.0-alpha.0", path = "../../core" }
assemblylift-core-iomod = { version = "0.4.0-alpha.0", path = "../../core/iomod" }
