[package]
name = "assemblylift-generic-docker"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3.1", features = ["cargo"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
wasmer = "2.1.1"
zip = "0.6"

assemblylift-core = { version = "0.4.0-alpha.0", path = "../../core" }
assemblylift-core-iomod = { version = "0.4.0-alpha.0", path = "../../core/iomod" }
