[package]
name = "assemblylift-kubelet"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "3.0", features = ["cargo"] }
crossbeam-channel = "0.5"
futures = "0.3"
#hyper = "0.14"
#k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22", "api"] }
krator = { version = "0.5", default-features = false, features = ["kube-native-tls"] }
kube = { version = "0.60", default-features = false, features = ["client", "derive", "native-tls"] }
kube-runtime = { version = "0.60", default-features = false }
kubelet = { git = "https://github.com/krustlet/krustlet", rev = "63cca61", version = "1.0.0-alpha.1", default-features = false, features = ["derive", "cli", "kube-native-tls"] }
oci-distribution = { version = "0.8", features = ["native-tls"] }
#reqwest = { version = "0.11", features = ["blocking"] }

serde_json = "1"
tempfile = "3.3"
tokio = "1.16"
tracing = "0.1"
tracing-subscriber = "0.2"

wasmer = "2.1.1"

assemblylift-core = { version = "0.4.0-alpha.1", path = "../../core" }
assemblylift-core-iomod = { version = "0.4.0-alpha.0", path = "../../core/iomod" }

[dev-dependencies]
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22"] }
#oci-distribution = "0.8"
