[package]
name = "assemblylift-awslambda-guest"
version = "0.1.0"
description = "AssemblyLift AWS Lambda WASM guest library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license = "Hippocratic-2.1"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.106"
serde_json = "1.0.53"
direct-executor = "0.3.0"
assemblylift_core_guest = { package = "assemblylift-core-guest", path = "../../../core/guest" }
assemblylift_core_event_guest = { package = "assemblylift-core-event-guest", path = "../../../core/event/guest" }
