[package]
name = "assemblylift-awslambda-host"
version = "0.2.3"
description = "AssemblyLift AWS Lambda runtime"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
tokio = "0.2.21"
crossbeam-utils = "0.8"
once_cell = "1.4.0"
clap = "3.0.0-beta.1"
reqwest = { version = "0.10.4", features = ["blocking"] }

wasmer = { version = "1.0", path = "../../../../../Forks/wasmer/lib/api" }
wasmer-engine-native = { version = "1.0", path = "../../../../../Forks/wasmer/lib/engine-native" }

assemblylift_core = { version = "0.2.2", package = "assemblylift-core", path = "../../../core" }
assemblylift_core_iomod = { version = "0.2.1", package = "assemblylift-core-iomod", path = "../../../core/iomod" }
assemblylift_core_io = { version = "0.2.0", package = "assemblylift-core-io", path = "../../../core/io" }
assemblylift_core_io_common = { version = "0.2.0", package = "assemblylift-core-io-common", path = "../../../core/io/common" }
