[package]
name = "assemblylift-awslambda-host"
version = "0.3.1"
description = "AssemblyLift AWS Lambda runtime"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.4", features = ["macros", "sync", "rt", "rt-multi-thread"] }
crossbeam-utils = "0.8"
once_cell = "1.4"
clap = "3.0.0-beta.1"
reqwest = { version = "0.11", features = ["blocking"] }
toml = "0.5"
zip = "0.5"

wasmer = { package = "wasmer-asml-fork", version = "2.0" }
wasmer-wasi = { package = "wasmer-wasi-asml-fork", version = "2.0" }
#wasmer-engine-native = "1.0"
wasmer-engine-universal = { version = "2.0" }

assemblylift_core = { version = "0.3", package = "assemblylift-core", path = "../../../core" }
assemblylift_core_iomod = { version = "0.3", package = "assemblylift-core-iomod", path = "../../../core/iomod" }
assemblylift_core_io_common = { version = "0.3", package = "assemblylift-core-io-common", path = "../../../core/io/common" }
