[package]
name = "assemblylift-awslambda-io"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = { version = "0.42.0", optional = true}
rusoto_dynamodb = { version = "0.42.0", optional = true}

[features]
default = []

host = ["rusoto_core", "rusoto_dynamodb"]
client = []
