[package]
name = "assemblylift-awslambda-iomod"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
lazy_static = "1.4.0"
rusoto_core = { version = "0.43.0" }
rusoto_dynamodb = { version = "0.43.0" }
wasmer-runtime = "0.16.2"
wasmer-runtime-core = "0.16.2"
assemblylift_core = { package = "assemblylift-core", path = "../../../core"}
assemblylift_core_event = { package = "assemblylift-core-event", path = "../../../core/event" }
