[package]
name = "assemblylift-awslambda-iomod"
version = "0.1.0"
authors = ["xlem <xlem@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
futures = "0.3.4"
lazy_static = "1.4.0"
crossbeam-utils = "0.7.2"
async-std = "1.5.0"
rusoto_core = { version = "0.43.0" }
rusoto_dynamodb = { version = "0.43.0", features = ["serialize_structs"] }
wasmer-runtime = { path = "../../../../../Forks/wasmer/lib/runtime" }
wasmer-runtime-core = { path = "../../../../../Forks/wasmer/lib/runtime-core" }
assemblylift_core = { package = "assemblylift-core", path = "../../../core"}
assemblylift_core_event = { package = "assemblylift-core-event", path = "../../../core/event" }
assemblylift_core_event_common = { package = "assemblylift-core-event-common", path = "../../../core/event/common" }
