[package]
name = "assemblylift-awslambda-widget"
version = "0.1.0"
authors = ["Daniel Cook <daniel@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemblylift_core = { package = "assemblylift-core", path = "../../../core", features = ["client"] }
