[package]
name = "assemblylift-core-event-common"
version = "0.1.0"
description = "AssemblyLift core event common library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license = "Hippocratic-2.1"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
