[package]
name = "assemblylift-core-event-guest"
version = "0.1.0"
authors = ["Daniel Cook <xlem@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
futures = "0.3.4"
lazy_static = "1.4.0"
embedded-executor = { path = "../../../../../Forks/embedded-executor" }
lock_api = "0.3.4"
assemblylift-core-event-common = { path = "../common" }
