[package]
name = "assemblylift-core-event-guest"
version = "0.1.0"
authors = ["Daniel Cook <xlem@akkoro.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
futures = "0.3.4"
lazy_static = "1.4.0"
serde = "1.0.106"
assemblylift-core-event-common = { path = "../common" }
