[package]
name = "assemblylift-core-event-guest"
version = "0.1.0"
description = "AssemblyLift core event WASM guest library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
futures = "0.3.4"
lazy_static = "1.4.0"
serde = "1.0.106"
assemblylift-core-event-common = { version = "0.1.0", path = "../common" }
