[package]
name = "assemblylift-core-io-guest"
version = "0.4.0-alpha.0"
description = "AssemblyLift core event WASM guest library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[dependencies]
serde = "1"
serde_json = "1"
futures = "0.3"
lazy_static = "1.4"
assemblylift-core-io-common = { version = "0.3", path = "../common" }
