[package]
name = "assemblylift-core-iomod-guest"
version = "0.4.0-alpha.0"
description = "AssemblyLift core IOmod guest library"
authors = ["Akkoro and the AssemblyLift contributors <assemblylift@akkoro.io>"]
edition = "2018"
license-file = "../../../LICENSE.md"
repository = "https://github.com/akkoro/assemblylift"
readme = "README.md"

[dependencies]
